--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @import "./typography.css";
+@import "./concept-links.css";
 
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
